# Impred

./: .gitattributes  README.md
Model/: YASO_cifar_10_model_ipynb_.ipynb  requirements.txt  weights-cifar10_modified.h5  yaso_cifar_10_model_ipynb_.py
impred/: models.py  pyproject.toml  views.py
impred/data/: YASO_cifar_10_model_ipynb_2.ipynb
impred/ds_project/: settings.py
impred/impred/: forms.py  models.py  views.py
impred/impred/static/impred/: index.css
impred/impred/templates/impred/: base.html  loadimage.html  predictimage.html
impred/static/impred/: styles.css
impred/templates/impred/: index.html  loadimage.html
impred/user/: forms.py
impred/user/templates/user/: login.html
user/: views.py
user/templates/user/: signup.html
